--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --main-eletric-theme-color: #EC407A; 
 
   --secondary-dark-theme-color: #6272A4;
+  --accent-dark-theme-color: #BD93F9;
 
   --success-tech-theme-color: #66BB6A; 
   --success-dark-theme-color: #50fA7B;
